8274548: Move logic from C to Java layer